--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   fluttertoast: ^8.0.7
   flare_flutter: ^3.0.2
   shared_preferences:
+  permission_handler: ^4.2.0+hotfix.3
+  http: ^0.13.3
+  cached_network_image: ^3.1.0
+  dio: ^4.0.0
+  url_launcher: ^5.4.2
+  url_launcher_web: ^0.1.1+1
+  image_gallery_saver: ^1.2.2
 
 dev_dependencies:
   flutter_test:
